force-app/main/default/objects/psa_Printer__c/psa_Printer__c.object-meta.xml
<CustomObject>
    <label>Printer</label>
    <nameField>
        <label>Printer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Printers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>