force-app/main/default/objects/psa_Printer__c/fields/Additional_Features__c.field-meta.xml
<CustomField>
    <fullName>Additional_Features__c</fullName>
    <description>Additional features of the printer</description>
    <label>Additional Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>