force-app/main/default/objects/psa_Printer__c/fields/Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Connectivity__c</fullName>
    <description>Connectivity of the printer</description>
    <inlineHelpText>How are prints initiated.</inlineHelpText>
    <label>Connectivity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Octoprint</fullName>
            </value>
            <value>
                <fullName>Klipper</fullName>
            </value>
            <value>
                <fullName>SD-Card</fullName>
            </value>
            <value>
                <fullName>USB</fullName>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>