force-app/main/default/objects/psa_Printer__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <description>Features of the printer</description>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct-Drive</fullName>
            </value>
            <value>
                <fullName>Bowden-Drive</fullName>
            </value>
            <value>
                <fullName>Enclosed</fullName>
            </value>
            <value>
                <fullName>Open Air</fullName>
            </value>
            <value>
                <fullName>Air Filtration</fullName>
            </value>
            <value>
                <fullName>Illuminated</fullName>
            </value>
            <value>
                <fullName>Filament Spool Heater</fullName>
            </value>
            <value>
                <fullName>Auto Bed-leveling</fullName>
            </value>
            <value>
                <fullName>Manual Bed-leveling</fullName>
            </value>
            <value>
                <fullName>2K</fullName>
            </value>
            <value>
                <fullName>4K</fullName>
            </value>
            <value>
                <fullName>DLP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>