force-app/main/default/objects/psa_Printer__c/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <description>Printer firmware version</description>
    <label>Firmware Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>