force-app/main/default/objects/psa_Printer__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Lookup for Manufacturer</description>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Printers</relationshipLabel>
    <relationshipName>Printers</relationshipName>
    <type>Lookup</type>
</CustomField>