force-app/main/default/objects/psa_Printer__c/fields/Max_Bed_Temp__c.field-meta.xml
<CustomField>
    <fullName>Max_Bed_Temp__c</fullName>
    <description>maximum heated bed temp</description>
    <label>Max Bed Temp</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>