force-app/main/default/objects/psa_Printer__c/fields/Max_Build_Volume__c.field-meta.xml
<CustomField>
    <fullName>Max_Build_Volume__c</fullName>
    <description>Maximum Build Volume for Printer</description>
    <formula>TEXT(Max_X__c) &amp; &quot; x &quot; &amp; TEXT(Max_Y__c) &amp; &quot; x &quot; &amp; TEXT(Max_Z__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Build Volume xyz (mm)</label>
    <type>Text</type>
</CustomField>