force-app/main/default/objects/psa_Printer__c/fields/Max_Hotend_Temp__c.field-meta.xml
<CustomField>
    <fullName>Max_Hotend_Temp__c</fullName>
    <description>Maximum Hotend temperature</description>
    <label>Max Hotend Temp</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>