force-app/main/default/objects/psa_Printer__c/fields/Max_X__c.field-meta.xml
<CustomField>
    <fullName>Max_X__c</fullName>
    <description>X-axis build dimension</description>
    <label>Max X (mm)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>