force-app/main/default/objects/psa_Printer__c/fields/Max_Y__c.field-meta.xml
<CustomField>
    <fullName>Max_Y__c</fullName>
    <description>Y-axis build dimension</description>
    <label>Max Y (mm)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>