force-app/main/default/objects/psa_Printer__c/fields/Max_Z__c.field-meta.xml
<CustomField>
    <fullName>Max_Z__c</fullName>
    <description>Z-Axis Build Volume</description>
    <label>Max Z (mm)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>