force-app/main/default/objects/psa_Printer__c/fields/Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Name__c</fullName>
    <description>FQN or IP of the Printer</description>
    <inlineHelpText>Enter in the FQN or IP of the Printer</inlineHelpText>
    <label>Network Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>