force-app/main/default/objects/psa_Printer__c/fields/Outage_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outage_Reason__c</fullName>
    <description>Reason Why Printer is Offline</description>
    <inlineHelpText>Enter the reason why the printer is offline</inlineHelpText>
    <label>Outage Reason</label>
    <type>TextArea</type>
</CustomField>