force-app/main/default/objects/psa_Printer__c/fields/Printer_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Printer_Image_URL__c</fullName>
    <description>Image for the printer</description>
    <label>Printer Image URL</label>
    <type>Url</type>
</CustomField>