force-app/main/default/objects/psa_Printer__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Serial Number of the Printer</description>
    <label>Serial Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>