force-app/main/default/objects/psa_Printer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Availability of the Printer</description>
    <inlineHelpText>Select whether the Printer is usable or down.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
                <default>true</default>
                <label>Online</label>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>