force-app/main/default/objects/psa_Printer__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Printer Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FDM - Cartesian</fullName>
                <default>true</default>
                <label>FDM - Cartesian</label>
            </value>
            <value>
                <fullName>FDM - Delta</fullName>
            </value>
            <value>
                <fullName>SLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>