force-app/main/default/objects/psa_Printer__c/validationRules/Offline_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Offline_Reason</fullName>
    <active>true</active>
    <description>Offline Printers must have a reason</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Offline&quot;),ISBLANK(Outage_Reason__c))</errorConditionFormula>
    <errorDisplayField>Outage_Reason__c</errorDisplayField>
    <errorMessage>Explain why the Printer is offline (not available)</errorMessage>
</ValidationRule>